Update index.html content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="vi"><head><meta charset="utf-8"><title>Xin chào</title></head><body>Xin chào từ Git</body></html>
+<html><body><h1>Welcome to my Github repository</h1></body></html>
